--- a/AbhikumarsBookStore/Areas/Admin/Views/CoverType/Upsert.cshtml
+++ b/AbhikumarsBookStore/Areas/Admin/Views/CoverType/Upsert.cshtml
@@ -1,15 +1,15 @@
-﻿@model AbhikumarsBooks.Models.Category;
+﻿@model AbhikumarsBooks.Models.CoverType;
 
 @{ Layout = "~/Views/Shared/_Layout.cshtml";
-   var title = "Create Category";
-    }
+    var title = "Create CoverType";
+}
 
 <form method="post">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if(Model.Id != 0)
+        @if (Model.Id != 0)
         {
-            title = "Edit Category";
+            title = "Edit CoverType";
         }
         <div class="col-12 border-bottom">
             <h2 class="text-primary"> @title</h2>
@@ -17,29 +17,29 @@
         <div class="col-8 pt-4">
             <div class="form-group row">
                 <div class="col-4">
-                   <label asp-for="Name"></label>
+                    <label asp-for="Name"></label>
                 </div>
                 <div class="col-8">
-                     <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-8 offset-4">
-                   @if(Model.Id != 0)
-                   {
-                <partial name="_EditAndBackToListButton" modal="Model.Id"   />
-            }
-    else
-            {
-                <partial name="_CreateAndBackToListButton" />
-            }
+                    @if (Model.Id != 0)
+                    {
+                        <partial name="_EditAndBackToListButton" modal="Model.Id" />
+                    }
+                    else
+                    {
+                        <partial name="_CreateAndBackToListButton" />
+                    }
                 </div>
             </div>
         </div>
     </div>
 </form>
 
-@section Scripts{ 
- <partial name="_ValidationScriptsPartial" />
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
 }
