--- a/AbhikumarsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AbhikumarsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model  AbhikumarsBooks.Models.ViewModels.ProductVM;
+﻿@model AbhikumarsBooks.Models.ViewModels.ProductVM;
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -112,7 +112,22 @@
         </div>
     </div>
 </form>
-
-@section Scripts {
+@section Scripts{
     <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdn.tiny.cloud/1/mcvfw77fn28jaiq5x57fzroib1awquwtyuyusgxomrnviob9/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'lists',
+            menubar: 'file edit format'
+        });
+        function validateInput() {
+            if (document.getElementById("uploadBox").value == "") {
+                swal("Error", "Please select an image", "error");
+                return false;
+            }
+            return true;
+        }
+    </script>
 }
